// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package types;

// Protobuf definition for the Rust struct ValidatorInfo
message ValidatorInfo {
  // Validator account address
  bytes account_address = 1;
  // Consensus public key
  bytes consensus_public_key = 2;
  // Validator voting power for consensus
  uint64 consensus_voting_power = 3;
  /// Network identity publick key
  bytes validator_network_identity_public_key = 4;
  /// Network address
  bytes validator_network_address = 5;
  /// Full node's network identity publick key
  bytes full_node_network_identity_public_key = 6;
  /// Full node's network address
  bytes full_node_network_address = 7;
}
